edit img di index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     }
 
     #image {
-      background-image: url("img/color.png"); 
+      background-image: url("color.png"); 
       height: 100%;
       width: 100%;
       position: absolute;
