edit gambar image di about.html

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       <!--  -->
 
       <div class="container1">
-        <img src="img/me.jpg" class="img-fluid image" alt="Sultan Iskandar">
+        <img src="me.jpg" class="img-fluid image" alt="Sultan Iskandar">
         <div class="overlay">
           <div class="text">
             <h4>Social Media</h4>
